# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//tools/json_schema_compiler/json_schema_api.gni")
import("//tools/json_schema_compiler/json_features.gni")
import("schemas.gni")

assert(enable_extensions)

generated_json_strings("nw_api") {
  sources = schema_sources
  configs = [ "//build/config:precompiled_headers" ]
  bundle_name = "nwjs"

  deps = schema_dependencies
}

# GYP version: chrome/browser/extensions/api/api.gyp:chrome_api_registration
function_registration("nw_api_registration") {
  # Only schemas with a C++ ExtensionFunction implementation are registered.
  # The schema-only (JS-bound) APIs in uncompiled_schema_sources have no
  # implementation header and would fail the bundle generator's strict header
  # existence check (crrev.com/c/7893470).
  sources = compiled_schema_sources
  impl_dir = "//content/nw/src/api"
  configs = [ "//build/config:precompiled_headers" ]
  bundle_name = "nwjs"

  # NW.js places all API implementation headers flat in this directory rather
  # than in per-schema subdirs, so exclude every schema from the automatic
  # "${impl_dir}/${name}/${name}_api.h" path calculation and list the actual
  # header paths explicitly.
  custom_impl_schemas = [
    "nw_object",
    "nw_app",
    "nw_clipboard",
    "nw_menu",
    "nw_screen",
    "nw_shell",
    "nw_shortcut",
    "nw_current_window_internal",
  ]

  inputs = [
    "nw_object_api.h",
    "nw_app_api.h",
    "nw_window_api.h",
    "nw_clipboard_api.h",
    "nw_menu_api.h",
    "nw_screen_api.h",
    "nw_shell_api.h",
    "nw_shortcut_api.h",
  ]

  deps = [
    # Different APIs include headers from these targets.
    "//content/public/browser",
    "//extensions/browser",

    # Different APIs include some headers from chrome/common that in turn
    # include generated headers from these targets.
    # TODO(brettw) this should be made unnecessary if possible.
    ":nw_api",
    "//skia",
    "//components/sync",
    "//third_party/metrics_proto",
    "//ui/accessibility:ax_enums_mojo",
  ]

  deps += schema_dependencies
}

generated_types("generated_api_types") {
  sources = schema_sources
}