# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//build/config/ui.gni")
import("//extensions/buildflags/buildflags.gni")

assert(enable_extensions)

# Common sources that are both bundled and compiled.
schema_sources = [
      "nw_object.idl",
      "nw_app.idl",
      "nw_window.idl",
      "nw_clipboard.idl",
      "nw_menu.idl",
      "nw_menuitem.idl",
      "nw_screen.idl",
      "nw_shell.idl",
      "nw_shortcut.idl",
      "nw_current_window_internal.idl",
      "nw_test.idl",
      "nw_tray.idl"
    ]

root_namespace = "extensions::nwapi::%(namespace)s"
schema_include_rules = "extensions/common/api:extensions::nwapi::%(namespace)s"
schema_dependencies = [ "//extensions/common/api" ]
